<resources>
    <string name="app_name">eCommerce</string>

    <string name="main_join_now_btn_txt">Join Now</string>
    <string name="main_login_btn_txt">Already have an Account? Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phn_number">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_login_short">Login</string>
    <string name="action_register_short">Create Account</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="admin_an_admin">I\'m an Admin?</string>
    <string name="admin_not_an_admin">I\'m not an Admin?</string>

    <!-- Register activity Strings -->
    <string name="msg_register_name">Please write your name...</string>
    <string name="msg_register_phone_number">Please write your phone number...</string>
    <string name="msg_register_password">Please write your password...</string>
    <string name="msg_register_success">Congratulations, your account has been created.</string>
    <string name="msg_register_network_error">Network Error: Please try again after some time...</string>
    <string name="msg_register_try_again">Please try again using another phone number.</string>
    <string name="msg_register_loadingbar_title">Create Account</string>
    <string name="msg_register_loadingbar_wait_msg">Please wait, while we are checking the credentials.</string>

    <!-- Login activity strings -->
    <string name="msg_login_loadingbar_title">Login Account</string>

</resources>