<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_applogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:src="@drawable/applogo"
        />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_applogo"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/prompt_name"
        android:inputType="text"
        android:background="@drawable/input_design"
        />

    <EditText
        android:id="@+id/register_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_username_input"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/prompt_phn_number"
        android:inputType="number"
        android:background="@drawable/input_design"
        />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_phone_number_input"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:background="@drawable/input_design"
        />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password_input"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:text="@string/action_register_short"
        android:background="@drawable/buttons"
        />

</RelativeLayout>